clase-11/03.1-mariadb-deployent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: clase11
  namespace: clase11
spec:
  selector:
    matchLabels:
      app: clase11
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: clase11
        tier: mariadb
    spec:
      containers:
      - image: mariadb:11.6
        name: mariadb
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-data-disk
