clase-11/04.1-wordpress-deployent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wordpress
  labels:
    app:  clase11
  namespace: clase11
spec:
  selector:
    matchLabels:
      app: clase11
      tier: frontend
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app:  clase11
        tier: frontend
    spec:
      containers:
      - name:  wordpress
        image:  wordpress:6.7-apache
        resources:
          requests:
            cpu: 250m
            memory: 300Mi
          limits:
            cpu: 500m
            memory: 600Mi
        ports:
        - containerPort:  80
          name:  wordpress
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wp-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
