clase-11/06.3-extdns-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  external-dns
  namespace: clase11
  labels:
    app:  external-dns
spec:
  selector:
    matchLabels:
      app: external-dns
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app:  external-dns
      annotations:
        # actualizar este campo con el valor obtenido luego
        # de crear el role con eksctl
        # iam.amazonaws.com/role: arn:aws:iam::XXXXXXXXXXXXX:role/ ###ACTUALIZAR###
        iam.amazonaws.com/role: arn:aws:iam::695454143523:role/eksctl-aws101-addon-iamserviceaccount-clase1-Role1-1N1VT1EA40O2B
    spec:
      containers:
      - name:  external-dns
        image:  registry.k8s.io/external-dns/external-dns:v0.15.0
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=aws101.org
        - --provider=aws
        # - --policy=upsert-only
        - --aws-zone-type=public
        - --registry=txt
        - --txt-owner-id=my-hostedzone-identifier
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      serviceAccount: external-dns
      securityContext:
        fsGroup: 65534
